NetBSD Problem Report #55975

From www@netbsd.org  Thu Feb  4 18:16:00 2021
Return-Path: <www@netbsd.org>
Received: from mail.netbsd.org (mail.netbsd.org [199.233.217.200])
	(using TLSv1.3 with cipher TLS_AES_256_GCM_SHA384 (256/256 bits))
	(Client CN "mail.NetBSD.org", Issuer "mail.NetBSD.org CA" (not verified))
	by mollari.NetBSD.org (Postfix) with ESMTPS id A6CC51A9217
	for <gnats-bugs@gnats.NetBSD.org>; Thu,  4 Feb 2021 18:16:00 +0000 (UTC)
Message-Id: <20210204181559.30F0D1A921F@mollari.NetBSD.org>
Date: Thu,  4 Feb 2021 18:15:59 +0000 (UTC)
From: rm@gnu.org
Reply-To: rm@gnu.org
To: gnats-bugs@NetBSD.org
Subject: current kernel crash in wpi_stop
X-Send-Pr-Version: www-1.0

>Number:         55975
>Category:       kern
>Synopsis:       current kernel crash in wpi_stop
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    kern-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Thu Feb 04 18:20:00 +0000 2021
>Closed-Date:    Mon Feb 08 19:11:33 +0000 2021
>Last-Modified:  Mon Feb 08 19:11:33 +0000 2021
>Originator:     Riccardo Mottola
>Release:        2021-02-03
>Organization:
>Environment:
does not end boot, NetBSD i386 9.99
>Description:
Releng kernel crashes on boot - beware typed by hand


vpanic(cll0f264,dc8edec0,dc8edee4,c0c2280a,cll0f264,cll0flbb,el20b0d0,7f,c5464cO0) at netbsd:vpanic+0x139
kern_assert(c110f264,cll0flbb,cl20b0d0,cl20b09c,7f,c5464c00,c5055300,c50c5000,c50c6bb4,c50c6bb8) at netbsd:kern_assert+0x23
cv_wait(c50c6bb8,c50c6bb4,ffffffff,c154abc0,20000000,05055300,c50c5000,dc8edf68,c02b9b0d,c50c5004) at netbsd:cv_wait+0xlb9
wpi_stop(c50c5004,1,8,20000000,2,101,c50c5004,c0c3ccea,6,dcc5d400) at netbsd:wpi_stop+0x80
wpi_softintr(c50c5004,0f78f977d,f763fd7f,c2480e24,4002b415,a9al82el,89080d08,8320d2c2,23110304) at netbsd:wpi_softintr+0x7ae
softint_dispatch(c532e700,4,fcffdfad,fff6bfeb,eeffdfbf,fdebffea,d8foffo,dc8f0f0fc,c50c7000,800050003) at netbsd:softint_dispatch+0x292
Bad frame pointer: 0xc50c7000


>How-To-Repeat:

>Fix:

>Release-Note:

>Audit-Trail:
From: Christos Zoulas <christos@zoulas.com>
To: gnats-bugs@netbsd.org
Cc: kern-bug-people@netbsd.org,
 gnats-admin@netbsd.org,
 netbsd-bugs@netbsd.org
Subject: Re: kern/55975: current kernel crash in wpi_stop
Date: Thu, 4 Feb 2021 13:56:52 -0500

 --Apple-Mail=_B5EC5499-EBF7-4EB2-8240-9C032EF2E293
 Content-Transfer-Encoding: 7bit
 Content-Type: text/plain;
 	charset=us-ascii

 This is a mutex lockdebug panic locking a mutex from an interrupt context.

 christos


 --Apple-Mail=_B5EC5499-EBF7-4EB2-8240-9C032EF2E293
 Content-Transfer-Encoding: 7bit
 Content-Disposition: attachment;
 	filename=signature.asc
 Content-Type: application/pgp-signature;
 	name=signature.asc
 Content-Description: Message signed with OpenPGP

 -----BEGIN PGP SIGNATURE-----
 Comment: GPGTools - http://gpgtools.org

 iF0EARECAB0WIQS+BJlbqPkO0MDBdsRxESqxbLM7OgUCYBxDdAAKCRBxESqxbLM7
 OumOAJ9rlCQFVbK2YdSTAP/EVGmAX8GziwCghPPJcCtngKgXDPo6SWVgYDWTxSI=
 =p65r
 -----END PGP SIGNATURE-----

 --Apple-Mail=_B5EC5499-EBF7-4EB2-8240-9C032EF2E293--

From: "Christos Zoulas" <christos@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/55975 CVS commit: src/sys/dev/pci
Date: Fri, 5 Feb 2021 11:06:25 -0500

 Module Name:	src
 Committed By:	christos
 Date:		Fri Feb  5 16:06:25 UTC 2021

 Modified Files:
 	src/sys/dev/pci: if_wpi.c

 Log Message:
 PR/55975: Riccardo Mottola: Don't try to lock a mutex from an interrupt context.


 To generate a diff of this commit:
 cvs rdiff -u -r1.89 -r1.90 src/sys/dev/pci/if_wpi.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->feedback
State-Changed-By: jakllsch@NetBSD.org
State-Changed-When: Sat, 06 Feb 2021 14:41:28 +0000
State-Changed-Why:
a fix was committed, please test



From: Riccardo Mottola <riccardo.mottola@libero.it>
To: gnats-bugs@netbsd.org, kern-bug-people@netbsd.org,
 netbsd-bugs@netbsd.org, gnats-admin@netbsd.org, jakllsch@NetBSD.org
Cc: 
Subject: Re: kern/55975 (current kernel crash in wpi_stop)
Date: Mon, 8 Feb 2021 20:03:57 +0100

 Hi,

 as already reported privately to Christos, the fix works.

 Riccardo

 jakllsch@NetBSD.org wrote:
 > Synopsis: current kernel crash in wpi_stop
 >
 > State-Changed-From-To: open->feedback
 > State-Changed-By: jakllsch@NetBSD.org
 > State-Changed-When: Sat, 06 Feb 2021 14:41:28 +0000
 > State-Changed-Why:
 > a fix was committed, please test
 >
 >
 >
 >

State-Changed-From-To: feedback->closed
State-Changed-By: jdolecek@NetBSD.org
State-Changed-When: Mon, 08 Feb 2021 19:11:33 +0000
State-Changed-Why:
Confirmed fixed, thanks for report.


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.46 2020/01/03 16:35:01 leot Exp $
$NetBSD: gnats_config.sh,v 1.9 2014/08/02 14:16:04 spz Exp $
Copyright © 1994-2020 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.