PR/55975: Riccardo Mottola: Don't try to lock a mutex from an interrupt context.